fix hover effect extra space

--- a/heart.css
+++ b/heart.css
@@ -75,8 +75,8 @@
   background:rgba(240,95,64,.9);
   position:absolute;top:0;
   text-align:center;
-  width:100%;
-  height:100%;
+  width: 100%;
+  height: calc(100% - var(--gap));
   transition:all .35s;
 }
 .sponsorsBox:hover .sponsorNameBox{
